# categorical-expression-helper

./: .depend  Makefile  README  aideur.ml  base.ml  char_codepoint.py  dune  equation.ml  lexer.mll  lexerExpr.ml  lexerExpr.mll  lexerExpr.mlu  lib.ml  make-and-run.sh  menus.ml  moreEquations.ml  parser.mly  parserExpr.mly  shell.nix  stringstuff.ml  testparser.ml  top.ml  toplib.ml
