;; This declares the hello_world executable implemented by hello_world.ml
(executable
 (name top)
 (libraries menhirLib sedlex unix)
 (preprocess (pps sedlex.ppx))
)
 (menhir (modules parserExpr))
  (rule 
    (target lexerExpr.ml)
    (deps lexerExpr.mlu char_codepoint.py)
    (action (chdir %{workspace_root} 
             ( with-stdin-from lexerExpr.mlu
             ( with-stdout-to %{target}
        
             (run python char_codepoint.py)
     ))
    ))

   )

